--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <!-- HTML Follows BEM naming conventions 
   IDs are only used for sections to connect menu achors to sections -->
-  <header class="page__header">
+  <header id="page__header" class="page__header">
     <nav id="navBar" class="navbar__menu">
       <!-- Navigation starts as empty UL that will be populated with JS -->
       <ul id="navbar__list">
