--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </nav>
   </header>
   <main>
+    <button id="scrollToTopBtn" class="scroll-to-top-btn">scroll to top</button>
     <header class="main__hero">
       <h1>Landing Page </h1>
     </header>
