--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <header id="page__header" class="page__header">
     <nav id="navBar" class="navbar__menu">
       <!-- Navigation starts as empty UL that will be populated with JS -->
-      <ul id="navbar__list">
+      <ul id="navbar__list" class="navbar__list">
       </ul>
     </nav>
   </header>
